-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.163 2007-12-13 19:28:28 remko Exp $
-----------------------------------------------------------------------------------------

2007-12-13	remko
	* pslegend.c:		Use unique names pslegend_$$.bat and pslegend_$$.txt (was GMT$$.bat and
				pslegend_tmp.txt). Write them in GMT_TMPDIR if defined.

2007-12-12	pwessel
	* pshistogram.c:	THe -R option was processed separately and did not understand time coordinates

2007-12-11	pwessel
	* psxy.c:		Now, -D applies to all symbols, lines, and polygons
	* psxyz.c:		New option -D with similar purpose as for psxy

2007-12-09	remko
	* gmt_shell_functions.txt:	Added to manpages

2007-12-07	pwessel
	* gmtmath.c:		Added constants TMIN, TMAX, TINC, and N
	* grdmath.c:		Added constants XMIN, XMAX, XINC, NX, YMIN, YMAX, YINC, and NY
	* gmt_shell_functions.sh:	Added to programs

2007-12-06	pwessel
	* gmtselect.c:		The -:o option failed to reverse output order
	* pshistogram.c:	Bug in -F option failed to center bins
	* x2sys/x2sys_get.c:	The -L option did not honor any -F or -N settings

2007-12-01	remko
	* gmt_init.c:		** Isolation mode implemented **
				At initialization, check is GMT_TMPDIR is defined and writable.
				When GMT_TMPDIR is defined: attempt to read .gmtdefaults4 from
				GMT_TMPDIR and always write .gmtdefaults4 to GMT_TMPDIR.
	* gmt_io.c (gmt_getuserpath):	Search first in GMT_TMPDIR (when defined).
	* gmt_plot.c:		When GMT_TMPDIR is defined: read and write .gmt_bb_info in GMT_TMPDIR.

2007-11-30	remko
	* gmt_dimensions.h:	New automatically generated file: contains all dimensions like
				GMT_N_PEN_NAMES, GMT_N_DATUMS, etc.
	* src/GNUmakefile:	Create gmt_dimensions.h. No more need for checks on those dimensions.
	* gmt.h:		Now includes gmt_dimensions.h. GMT_HASH_SIZE removed.
	* gmt_colors.h, gmt_grdio.h, gmt_globals.h:	Now get GMT_N_* from gmt_dimensions.h